Stretch logo fix

--- a/src/documents/themes/stretchcon/css/stretchcon.less
+++ b/src/documents/themes/stretchcon/css/stretchcon.less
@@ -1,9 +1,13 @@
 .about p strong { color: #333333; font-size: 120%; }
 
-.header { background: url(../img/logo.png) no-repeat center center; padding: 220px 0 0 0; }
+.header { background: url(../img/logo.png) no-repeat center 60%; background-size: 35%; padding: 220px 0 0 0; }
 
 .header .wrapper { padding-top: 50px; }
 
 .header .logo-name { display: none; }
 
 .tagline { margin: 0; color: #000; text-shadow: none; }
+
+@media only screen and (max-width: 800px) {
+	.header { background: url(../img/logo.png) no-repeat center center; background-size: 70%; padding: 200px 0 0 0; }
+}
